<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources>
    <string name="app_name">Advanced settings</string>

    <!-- Page Headers -->
    <string name="tab_general_title">GENERAL</string>
    <string name="tab_touchkey_title">TOUCHKEY</string>

    <!-- Page General -->
    <string name="category_screen_title">Screen</string>
    <string name="g_sensor_title">Horizontal calibration</string>
    <string name="g_sensor_summary">Calibrate horizontally using accelerometer</string>
    <string name="gsensor_ready">Place device on a level surface and tap Calibrate</string>
    <string name="gsensor_calibrating">Calibrating. Do not move device. Please wait...</string>
    <string name="gsensor_nofile">Unable to find offset file. Try again</string>
    <string name="gsensor_end">Calibrated</string>
    <string name="gsensor_button1">Complete</string>
    <string name="gsensor_button2">Calibrate</string>
	
    <string name="category_fast_charge_title">Fast Charge Support</string>
    <string name="force_fast_charge_head">Force Fast Charge</string>
    <string name="force_fast_charge_summary_head">Detect USB-connected PC as USB Wall Charger, for faster charging mode</string>

    <string name="category_vibration_title">Vibration</string>
    <string name="vibration_title_head">Vibration</string>
    <string name="vibration_summary_head">Control vibration intensity</string>
    <string name="vibration_title">Vibration intensity</string>
    <string name="vibration_test_title">Test</string>

    <string name="button_reset_title">Reset</string>

    <string name="fsync_subcat_title">FSync</string>
    <string name="fsync_title_head">FSync mode</string>
    <string name="fsync_summary_head">Disabling fsync can improve IO performace, but it may cause data corruption. Dynamic fsync will sync all buffers when screen turns off.</string>

    <!-- Page TouchKey -->
    <string name="category_touchkey_title">Touch Keys</string>
    <string name="backlight_timeout_title_head">Backlight Timeout</string>
    <string name="backlight_timeout_summary_head">Adjust the delay before the touch key backlight automatically turns off</string>
    <string name="touchlight_status_title_head">Backlight on Touchscreen Press</string>
    <string name="touchlight_status_summary_head">Activation status of touchkeys backlight on touchscreen press</string>
    <string name="backlight_title_head">Backlight Notifications</string>
    <string name="backlight_summary_head">Backlight Notification Settings (external application)</string>

    <string name="category_pkfmanager_title">Phantom key presses</string>
    <string name="pkfmanager_title_head">Phantom key presses filter</string>
    <string name="pkfmanager_summary_head">Filter the unwanted key presses caused by antenna interference (external application)</string>
</resources>
