<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_horizontal" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/vibration_text" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vibration_title" />
        <TextView android:id="@id/vibration_value" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
        <SeekBar android:id="@id/vibration_seekbar" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/vibration_text" />
        <LinearLayout android:gravity="center_horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/vibration_seekbar">
            <Button android:id="@id/vibration_test" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vibration_test_title" android:width="120.0dip" />
            <Button android:id="@id/vibration_reset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_reset_title" android:width="120.0dip" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>